--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,27 @@ buildscript {
     repositories {
         maven { url 'https://repo.spring.io/snapshot' }
         maven { url 'https://repo.spring.io/libs-milestone' }
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
 
     dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.2.0.BUILD-SNAPSHOT'
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.6.RELEASE'
+        classpath 'io.franzbecker:gradle-lombok:2.1'
     }
 }
 
 subprojects {
-	apply plugin: 'java'
+    apply plugin: 'java'
+    apply plugin: 'io.franzbecker.gradle-lombok'
 
-	group = 'framework.templates'
-	version = '0.0.1-SNAPSHOT'
-	sourceCompatibility = '1.8'
+    group = 'framework.templates.springbootwebflux'
+    version = '0.0.1-SNAPSHOT'
+    sourceCompatibility = '1.8'
+}
+
+ext {
+    versions = [
+            springBoot: "2.0.6.RELEASE",
+            spring    : "5.0.7.RELEASE"
+    ]
 }
