--- a/service/build.gradle
+++ b/service/build.gradle
@@ -9,8 +9,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compile "org.springframework.boot:spring-boot-starter-webflux:${versions.springBoot}"
+    testImplementation "org.springframework.boot:spring-boot-starter-test:${versions.springBoot}"
     testImplementation 'io.projectreactor:reactor-test'
     compile group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.9.8', ext: 'pom'
+}
+
+jar {
+    enabled = true
 }
