[template] Added 2 endpoints, for search quote and random quote
- Introduced 2 strategies, to handle json+text responses
- Refactored fts and unit tests

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ subprojects {
 ext {
     versions = [
             springBoot: "2.0.6.RELEASE",
-            spring    : "5.0.7.RELEASE"
+            spring    : "5.0.7.RELEASE",
+            junit             : [
+                    jupiter: "5.5.2"
+            ]
     ]
 }
