--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ buildscript {
     }
 }
 
+wrapper {
+    gradleVersion = "5.4.1"
+}
+
 subprojects {
     apply plugin: 'java'
     apply plugin: 'io.franzbecker.gradle-lombok'
