--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,3 +1,20 @@
+import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import com.bmuschko.gradle.docker.tasks.image.DockerPullImage
+import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
+import com.bmuschko.gradle.docker.tasks.image.DockerRemoveImage
+
+buildscript {
+    repositories {
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.bmuschko:gradle-docker-plugin:6.1.1'
+    }
+}
+
 plugins {
     id 'org.springframework.boot'
     id 'io.spring.dependency-management'
@@ -7,6 +24,8 @@ repositories {
     mavenCentral()
     maven { url 'https://repo.spring.io/snapshot' }
 }
+
+apply plugin: 'com.bmuschko.docker-remote-api'
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-webflux:${versions.springBoot}"
@@ -29,6 +48,14 @@ dependencies {
     testCompile "org.junit.jupiter:junit-jupiter-params:${versions.junit.jupiter}"
 }
 
+project.ext {
+    imageName = 'spring-boot-webflux-template'
+    dockerUsername = 'xxxx'
+    dockerPassword = 'xxxx'
+    dockerEmail = 'xxxx'
+}
+project.version = project.properties.getOrDefault('testVersion', "0.2.0")
+
 jar {
     enabled = true
 }
@@ -40,4 +67,30 @@ bootJar {
 
 test {
     useJUnitPlatform()
+}
+
+docker {
+    registryCredentials {
+        url = 'docker.io'
+        username = System.getenv('DOCKER_USERNAME') ?: project.ext.dockerUsername
+        password = System.getenv('DOCKER_PASSWORD') ?: project.ext.dockerPassword
+        email = System.getenv('DOCKER_EMAIL') ?: project.ext.dockerEmail
+    }
+}
+task buildImage(type: DockerBuildImage) {
+    inputDir = file(projectDir)
+    images.add("bpstelios10/$project.ext.imageName:$project.version")
+}
+task pushImage(type: DockerPushImage) {
+    dependsOn buildImage
+    images.set(buildImage.images)
+}
+task removeImage(type: DockerRemoveImage) {
+    dependsOn pushImage
+    force = true
+    targetImageId buildImage.getImageId()
+}
+task pullImage(type: DockerPullImage) {
+    dependsOn removeImage
+    image = "bpstelios10/$project.ext.imageName:$project.version"
 }
