[template] Upgraded to java 11

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ subprojects {
 
     group = 'framework.templates.springbootwebflux'
     version = '0.0.1-SNAPSHOT'
-    sourceCompatibility = '1.8'
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 ext {
