--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'spring-boot-webflux'
-include 'service', 'service-functional'
 
+include 'service', 'service-functional', 'service-mocks'
