--- a/helm/infrastructure/templates/webflux-template-dev-namespace.yaml
+++ b/helm/infrastructure/templates/webflux-template-dev-namespace.yaml
@@ -21,3 +21,12 @@ spec:
     requests.memory: 2Gi
     requests.storage: "0"
     resourcequotas: "1"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: dev-config
+  namespace: webflux-template-dev
+data:
+  SPRING_PROFILES_ACTIVE: 'dev'
+  QUOTE_RANDOM_URL: 'webflux-mocks.webflux-template-dev'
