--- a/service-functional/build.gradle
+++ b/service-functional/build.gradle
@@ -1,5 +1,3 @@
-sourceCompatibility = 1.8
-
 repositories {
     mavenCentral()
 }
@@ -12,11 +10,11 @@ dependencies {
     compile project(":service").sourceSets.main.output
     compile project(":service-mocks").sourceSets.main.output
 
-    compile group: 'io.cucumber', name: 'cucumber-jvm', version: '4.2.6'
-    compile group: 'io.cucumber', name: 'cucumber-spring', version: '4.2.6'
-    compile group: 'io.cucumber', name: 'cucumber-java8', version: '4.2.6'
+    compile "io.cucumber:cucumber-jvm:4.2.6"
+    compile "io.cucumber:cucumber-spring:4.2.6"
+    compile "io.cucumber:cucumber-java8:4.2.6"
 
-    compile "org.springframework.boot:spring-boot-starter-test:${versions.springBoot}"
+    compile "org.assertj:assertj-core:3.16.1"
     compile "org.apache.httpcomponents:httpclient:4.5.3"
     compile 'org.apache.commons:commons-collections4:4.1'
     // Fixes running tests in IntelliJ - don't set as runtime dependency, breaks remote functional tests
