--- a/helm/spring-boot-webflux/Chart.yaml
+++ b/helm/spring-boot-webflux/Chart.yaml
@@ -3,5 +3,10 @@ name: spring-boot-webflux
 description: Helm chart for the service deployments
 
 type: application
-version: 0.3.0
+version: 0.6.0
 appVersion: 0.4.0
+
+dependencies:
+  - name: helm-deployment-library
+    version: 0.1.0
+    repository: file://../helm-deployment-library
