[template] Added remote nfts execution
- Upgraded helm-plugin to include job template
- Added tasks for docker-repo and helm-deployments in nfts

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ import org.apache.commons.io.FileUtils
 task copyHelmPluginRequiredFiles() {
     copyFileFromResources("helm-deployment-library/Chart.yaml", "helm-deployment-library/Chart.yaml")
     copyFileFromResources("helm-deployment-library/templates/_service-deployment.tpl", "helm-deployment-library/templates/_service-deployment.tpl")
+    copyFileFromResources("helm-deployment-library/templates/_job.tpl", "helm-deployment-library/templates/_job.tpl")
     copyFileFromResources("gitignore", ".gitignore")
 }
 
@@ -27,7 +28,7 @@ buildscript {
 
     dependencies {
         classpath 'io.franzbecker:gradle-lombok:2.1'
-        classpath 'stelios.tools:helm-plugin:0.4.0'
+        classpath 'stelios.tools:helm-plugin:0.5.0'
         classpath 'commons-io:commons-io:2.6'
     }
 }
