--- a/service-nft/build.gradle
+++ b/service-nft/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath 'com.bmuschko:gradle-docker-plugin:6.6.1'
+    }
+}
+
 plugins {
     id 'com.github.johnrengelman.shadow' version '5.1.0' apply true
 }
@@ -23,6 +32,8 @@ dependencies {
 }
 
 project.version = '0.1.0'
+apply from: "repo-tasks.gradle"
+apply from: "helm-tasks.gradle"
 
 shadowJar {
     archiveFileName = 'service-nft.jar'
