--- a/service-nft/src/main/resources/nft.conf
+++ b/service-nft/src/main/resources/nft.conf
@@ -29,7 +29,7 @@
     appUrl = "http://service:8080"
   }
 
-  nftK8s {
-    appUrl = ""
+  webflux-template-test {
+    appUrl = "http://spring-boot-webflux.webflux-template-test:8080"
   }
 }
