--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,8 +1,9 @@
 FROM openjdk:11
 WORKDIR /
 
-ADD build/libs/service.jar /app/service.jar
-
 EXPOSE 8080 8080
 
-CMD "java" "-jar" "/app/service.jar"
+COPY scripts/start_app.sh /
+ADD build/libs/service.jar /app/service.jar
+
+CMD ["/start_app.sh"]
