--- a/helm/webflux-nft/Chart.yaml
+++ b/helm/webflux-nft/Chart.yaml
@@ -3,10 +3,10 @@ name: webflux-nft
 description: Helm chart for the nft job
 
 type: application
-version: 0.2.0
+version: 0.3.0
 appVersion: 0.1.0
 
 dependencies:
   - name: helm-deployment-library
     version: 0.1.0
-    repository: file://../helm-deployment-library
+    repository: "@helm-plugin"
