--- a/helm/spring-boot-webflux/Chart.yaml
+++ b/helm/spring-boot-webflux/Chart.yaml
@@ -3,10 +3,10 @@ name: spring-boot-webflux
 description: Helm chart for the service deployments
 
 type: application
-version: 0.9.0
+version: 0.10.0
 appVersion: 0.7.0
 
 dependencies:
   - name: helm-deployment-library
     version: 0.1.0
-    repository: file://../helm-deployment-library
+    repository: "@helm-plugin"
