--- a/service-nft/src/main/resources/nft.conf
+++ b/service-nft/src/main/resources/nft.conf
@@ -8,7 +8,14 @@
       successfulRequestPercentage: 99.90
     }
     peakLoad1h {
-      endpointTps: "defaultTps"
+      endpointTps: "highVolumeTps"
+      rampUpTimeSec: 30
+      statusEndpointResponseTime: 300
+      randomQuotesEndpointResponseTime: 800
+      successfulRequestPercentage: 99.99
+    }
+    soakLoad1h {
+      endpointTps: "mediumVolumeTps"
       rampUpTimeSec: 30
       statusEndpointResponseTime: 300
       randomQuotesEndpointResponseTime: 800
@@ -18,6 +25,14 @@
     defaultTps {
       statusEndpointTps: 1
       randomQuotesEndpointTps: 10
+    }
+    mediumVolumeTps {
+      statusEndpointTps: 10
+      randomQuotesEndpointTps: 250
+    }
+    highVolumeTps {
+      statusEndpointTps: 10
+      randomQuotesEndpointTps: 500
     }
   }
 
