--- a/service-mocks/Dockerfile
+++ b/service-mocks/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /wiremock
 
 COPY build/libs/service-mocks.jar service-mocks.jar
 COPY src/main/resources/mappings /data/mappings/mappings/
+COPY src/main/resources/mappings-nft /data/mappings-nft/mappings/
 COPY scripts/start_app.sh /
 
 CMD ["/start_app.sh"]
