--- a/service-mocks/build.gradle
+++ b/service-mocks/build.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 mainClassName = "com.github.tomakehurst.wiremock.standalone.WireMockServerRunner"
-project.version = project.properties.getOrDefault('testVersion', "0.2.0")
+project.version = project.properties.getOrDefault('testVersion', "0.4.0")
 apply from: "repo-tasks.gradle"
 apply from: "helm-tasks.gradle"
 repositories {
@@ -40,10 +40,10 @@ run {
             '--global-response-templating',
             '--container-threads=200',
             '--jetty-acceptor-threads=50',
-            '--async-response-enabled',
+            '--async-response-enabled=true',
             '--async-response-threads=200',
 //            '--max-request-journal-entries=10000',
-            '--no-request-journal', //enable this for nft executions and swap with previous line if dev debug is needed
+            '--no-request-journal',
             '--root-dir=build/resources/main'
     ]
 }
