[template] Increased tps and added new config for very high tps

--- a/service-nft/src/main/resources/nft.conf
+++ b/service-nft/src/main/resources/nft.conf
@@ -4,21 +4,28 @@
       endpointTps: "defaultTps"
       rampUpTimeSec: 30
       statusEndpointResponseTime: 300
-      randomQuotesEndpointResponseTime: 800
+      randomQuotesEndpointResponseTime: 1900
       successfulRequestPercentage: 99.90
     }
     peakLoad1h {
       endpointTps: "highVolumeTps"
-      rampUpTimeSec: 30
+      rampUpTimeSec: 120
       statusEndpointResponseTime: 300
-      randomQuotesEndpointResponseTime: 800
+      randomQuotesEndpointResponseTime: 1800
+      successfulRequestPercentage: 99.99
+    }
+    extraHighLoad1h {
+      endpointTps: "extraHighVolumeTps"
+      rampUpTimeSec: 120
+      statusEndpointResponseTime: 300
+      randomQuotesEndpointResponseTime: 1800
       successfulRequestPercentage: 99.99
     }
     soakLoad1h {
       endpointTps: "mediumVolumeTps"
       rampUpTimeSec: 30
       statusEndpointResponseTime: 300
-      randomQuotesEndpointResponseTime: 800
+      randomQuotesEndpointResponseTime: 1900
       successfulRequestPercentage: 99.99
     }
 
@@ -28,11 +35,15 @@
     }
     mediumVolumeTps {
       statusEndpointTps: 10
-      randomQuotesEndpointTps: 250
+      randomQuotesEndpointTps: 350
     }
     highVolumeTps {
       statusEndpointTps: 10
-      randomQuotesEndpointTps: 500
+      randomQuotesEndpointTps: 850
+    }
+    extraHighVolumeTps {
+      statusEndpointTps: 10
+      randomQuotesEndpointTps: 1000
     }
   }
 
